src/test/ui/type-alias-impl-trait/generic_underconstrained.stderr
error: at least one trait must be specified
  --> $DIR/generic_underconstrained.rs:6:35
   |
LL | type Underconstrained<T: Trait> = impl 'static;
   |                                   ^^^^^^^^^^^^

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/generic_underconstrained.rs:6:1
   |
LL | type Underconstrained<T: Trait> = impl 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting this type parameter with `T: Trait`
  --> $DIR/generic_underconstrained.rs:10:19
   |
LL | fn underconstrain<T>(_: T) -> Underconstrained<T> {
   |                   ^
   = note: the return type of a function must have a statically known size

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
